<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/furshet"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="start|top"
            android:hint="@string/name_dish"
            android:textSize="12sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="start|top"
            android:textSize="12sp"
            android:hint="@string/name_author"
            android:inputType="textMultiLine"
            tools:ignore="MissingConstraints,TextViewEdits" />

        <TextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="start|top"
            android:textSize="12sp"
            android:hint="@string/name_category"
            android:inputType="textMultiLine"
            tools:ignore="MissingConstraints,TextViewEdits" />

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="start|top"
            android:textSize="12sp"
            android:layout_marginBottom="40dp"
            android:paddingBottom="30dp"
            android:hint="@string/name_recipe"
            android:inputType="textMultiLine"
            tools:ignore="MissingConstraints,TextViewEdits" />
    </LinearLayout>

</ScrollView>